force-app/main/default/objects/Contract/fields/AC_Next_month__c.field-meta.xml
<CustomField>
    <fullName>AC_Next_month__c</fullName>
    <formula>IF(MONTH( SM_AC_start_date__c ) &lt;&gt; MONTH(DATEVALUE(CreatedDate)),1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AC Next month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>