force-app/main/default/objects/Contract/fields/AC_Payment_Past_Due__c.field-meta.xml
<CustomField>
    <fullName>AC_Payment_Past_Due__c</fullName>
    <formula>IF(AND(TODAY()&gt; SM_AC_start_date__c,NOT(SM_AC_collected__c)), TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AC Payment Past Due</label>
    <type>Checkbox</type>
</CustomField>