force-app/main/default/objects/Contract/fields/ACH_Orders_Count__c.field-meta.xml
<CustomField>
    <fullName>ACH_Orders_Count__c</fullName>
    <label>ACH Orders Count</label>
    <summaryFilterItems>
        <field>SM_ACH_Order__c.SM_Payment_Status__c</field>
        <operation>equals</operation>
        <value>Initiated, Pending, Created, Stopped</value>
    </summaryFilterItems>
    <summaryForeignKey>SM_ACH_Order__c.SM_Contract__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>