force-app/main/default/objects/Contract/fields/Agreement_Orig_Pay_Day__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Orig_Pay_Day__c</fullName>
    <label>Agreement Original Pay Day</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>