force-app/main/default/objects/Contract/fields/Assigned_Collection_Agent__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Collection_Agent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned Collection Agent</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>