force-app/main/default/objects/Contract/fields/Audit_Payments_Master_Contract__c.field-meta.xml
<CustomField>
    <fullName>Audit_Payments_Master_Contract__c</fullName>
    <label>Audit Payments Master Contract</label>
    <length>255</length>
    <type>Text</type>
</CustomField>