force-app/main/default/objects/Contract/fields/Authorize_Person__c.field-meta.xml
<CustomField>
    <fullName>Authorize_Person__c</fullName>
    <label>Authorized Person</label>
    <length>100</length>
    <type>Text</type>
</CustomField>