force-app/main/default/objects/Contract/fields/Bill_Last_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Bill_Last_Created_Date__c</fullName>
    <label>Bill Last Created Date</label>
    <summarizedField>Contract_Bill__c.CreatedDate</summarizedField>
    <summaryForeignKey>Contract_Bill__c.Contract__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>