force-app/main/default/objects/Contract/fields/Bills_Last_Date__c.field-meta.xml
<CustomField>
    <fullName>Bills_Last_Date__c</fullName>
    <label>Bills Last Date</label>
    <summarizedField>Contract_Bill__c.Bill_Date__c</summarizedField>
    <summaryForeignKey>Contract_Bill__c.Contract__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>