force-app/main/default/objects/Contract/fields/Bundle__c.field-meta.xml
<CustomField>
    <fullName>Bundle__c</fullName>
    <formula>IF(ISPICKVAL(Contract_Type__c  , &quot;Dependent&quot;),
CASE(Principal_Contract__r.SM_Monthly_offer__c , 139, 12, 149, 18, 159, 18,169,24,12),
CASE(SM_Monthly_offer__c , 139, 12, 149, 18, 159, 18,169,24,12))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bundle</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>