force-app/main/default/objects/Contract/fields/Bypass_Payment_Method_Validation__c.field-meta.xml
<CustomField>
    <fullName>Bypass_Payment_Method_Validation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bypass_Payment_Method_Validation</label>
    <type>Checkbox</type>
</CustomField>