force-app/main/default/objects/Contract/fields/CANCELAR_CONTRATO__c.field-meta.xml
<CustomField>
    <fullName>CANCELAR_CONTRATO__c</fullName>
    <label>CANCELAR CONTRATO</label>
    <length>150</length>
    <type>Text</type>
</CustomField>