force-app/main/default/objects/Contract/fields/CB_Subscription_Linked__c.field-meta.xml
<CustomField>
    <fullName>CB_Subscription_Linked__c</fullName>
    <formula>NOT ISNULL(CB_Subscription__c) &amp;&amp; NOT ISBLANK(CB_Subscription__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CB Subscription Linked</label>
    <type>Checkbox</type>
</CustomField>