force-app/main/default/objects/Contract/fields/CE_Maturity_Months__c.field-meta.xml
<CustomField>
    <fullName>CE_Maturity_Months__c</fullName>
    <formula>TEXT(DAY(ADDMONTHS(SM_FechaBase_ACRC__c, Bundle__c)))
&amp; &apos; de &apos; &amp;
CASE(MONTH(ADDMONTHS(SM_FechaBase_ACRC__c, Bundle__c)),
   1, &quot;enero&quot;,
   2, &quot;febrero&quot;,
   3, &quot;marzo&quot;,
   4, &quot;abril&quot;,
   5, &quot;mayo&quot;,
   6, &quot;junio&quot;,
   7, &quot;julio&quot;,
   8, &quot;agosto&quot;,
   9, &quot;septiembre&quot;,
   10, &quot;octubre&quot;,
   11, &quot;noviembre&quot;,
   12, &quot;diciembre&quot;,
   &quot;0&quot;
)
&amp; &apos; del &apos; &amp;
TEXT(YEAR(ADDMONTHS(SM_FechaBase_ACRC__c, Bundle__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Maturity_Months</label>
    <type>Text</type>
</CustomField>