force-app/main/default/objects/Contract/fields/Chargent_Orders_Count__c.field-meta.xml
<CustomField>
    <fullName>Chargent_Orders_Count__c</fullName>
    <label>Chargent Orders Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>