force-app/main/default/objects/Contract/fields/CNT_BillingAddress__c.field-meta.xml
<CustomField>
    <fullName>CNT_BillingAddress__c</fullName>
    <formula>SM_Billing_Address__r.Street</formula>
    <label>CNT_BillingAddress</label>
    <type>Text</type>
</CustomField>