force-app/main/default/objects/Contract/fields/Collection_Main_Contract__c.field-meta.xml
<CustomField>
    <fullName>Collection_Main_Contract__c</fullName>
    <label>Collection Main Contract</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending data capture</fullName>
                <default>true</default>
                <label>Pending data capture</label>
            </value>
            <value>
                <fullName>Ready for collection</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>