force-app/main/default/objects/Contract/fields/Commissions_Payment_Status__c.field-meta.xml
<CustomField>
    <fullName>Commissions_Payment_Status__c</fullName>
    <defaultValue>&quot;PENDING&quot;</defaultValue>
    <label>Commissions Payment Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PENDING</fullName>
                <default>true</default>
                <label>PENDING</label>
            </value>
            <value>
                <fullName>TO BE PAID</fullName>
            </value>
            <value>
                <fullName>PAID</fullName>
                <color>#33CC00</color>
                <label>PAID</label>
            </value>
            <value>
                <fullName>NOT PAID</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>