force-app/main/default/objects/Contract/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contract.SM_Process_automation_by_product_family__r.Name</field>
            <operation>equals</operation>
            <value>Credit Elevator Child RC A</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>ContractSeguimiento</relationshipLabel>
    <relationshipName>ContractsSeguimiento</relationshipName>
    <type>Lookup</type>
</CustomField>