force-app/main/default/objects/Contract/fields/Contract_activation_form__c.field-meta.xml
<CustomField>
    <fullName>Contract_activation_form__c</fullName>
    <label>Contract activation form</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Future activation with conditions</fullName>
            </value>
            <value>
                <fullName>Immediate activation</fullName>
                <default>true</default>
                <label>Immediate activation</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>