force-app/main/default/objects/Contract/fields/Contract_Asset_Product__c.field-meta.xml
<CustomField>
    <fullName>Contract_Asset_Product__c</fullName>
    <label>First Asset</label>
    <length>255</length>
    <type>Text</type>
</CustomField>