force-app/main/default/objects/Contract/fields/Contract_Bills_Count__c.field-meta.xml
<CustomField>
    <fullName>Contract_Bills_Count__c</fullName>
    <label>Contract Bills Count</label>
    <summaryForeignKey>Contract_Bill__c.Contract__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>