force-app/main/default/objects/Contract/fields/Contract_Calculated_RC_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Calculated_RC_Start_Date__c</fullName>
    <formula>IF(NOT(ISNULL(SM_Rc_start_date__c)),SM_Rc_start_date__c,IF(StartDate &gt;SM_Start_date__c,StartDate,SM_Start_date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Calculated RC Start Date</label>
    <type>Date</type>
</CustomField>