force-app/main/default/objects/Contract/fields/Contract_Calculated_Sale_Value__c.field-meta.xml
<CustomField>
    <fullName>Contract_Calculated_Sale_Value__c</fullName>
    <formula>IF( SM_Requires_AC_Payment__c =TRUE,SM_Total_ac__c,SM_Monthly_offer__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Calculated Sale Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>