force-app/main/default/objects/Contract/fields/Contract_Calculated_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Calculated_Start_Date__c</fullName>
    <formula>IF( SM_Requires_AC_Payment__c =TRUE,SM_AC_start_date__c, SM_Start_date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Calculated Start Date</label>
    <type>Date</type>
</CustomField>