force-app/main/default/objects/Contract/fields/Contract_Calculated_Start_Date_Day__c.field-meta.xml
<CustomField>
    <fullName>Contract_Calculated_Start_Date_Day__c</fullName>
    <formula>DAY(Contract_Calculated_Start_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Calculated Start Date Day</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>