force-app/main/default/objects/Contract/fields/Contract_Calculated_Start_Date_Year__c.field-meta.xml
<CustomField>
    <fullName>Contract_Calculated_Start_Date_Year__c</fullName>
    <formula>YEAR(Contract_Calculated_Start_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Calculated Start Date Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>