force-app/main/default/objects/Contract/fields/Contract_End_Date_Calculated__c.field-meta.xml
<CustomField>
    <fullName>Contract_End_Date_Calculated__c</fullName>
    <description>This formula Calculate the End of the contract using the SM_Plan_Months__c, where if the plan months is bigger of 60 then the End of the contract is TODAY() else Add the Plan Months to Start Date OR SM_Start_date__c using the bigger date</description>
    <formula>IF(NOT(ISNULL(SM_Plan_Months__c))
  ,IF(SM_Plan_Months__c&lt;=60
     ,ADDMONTHS(Contract_Calculated_RC_Start_Date__c,SM_Plan_Months__c)     
     ,IF(ADDMONTHS(Contract_Calculated_RC_Start_Date__c,6)&lt;TODAY()
        ,TODAY()
        ,ADDMONTHS(Contract_Calculated_RC_Start_Date__c,6)
      )
   )  
  ,ADDMONTHS(Contract_Calculated_Start_Date__c,7)  
 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract End Date Calculated</label>
    <type>Date</type>
</CustomField>