force-app/main/default/objects/Contract/fields/Contract_Monitoring_By__c.field-meta.xml
<CustomField>
    <fullName>Contract_Monitoring_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract Monitoring By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ContractsMonitoringBy</relationshipName>
    <type>Lookup</type>
</CustomField>