force-app/main/default/objects/Contract/fields/Contract_month_Eng__c.field-meta.xml
<CustomField>
    <fullName>Contract_month_Eng__c</fullName>
    <formula>CASE(MONTH(today()),
1, &quot;January&quot;,
2, &quot;February&quot;,
3, &quot;March&quot;,
4, &quot;April&quot;,
5, &quot;May&quot;,
6, &quot;June&quot;,
7, &quot;July&quot;,
8, &quot;August&quot;,
9, &quot;September&quot;,
10, &quot;October&quot;,
11, &quot;November&quot;,
12, &quot;December&quot;,
&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract month Eng</label>
    <type>Text</type>
</CustomField>