force-app/main/default/objects/Contract/fields/Contract_To_Be_Collected__c.field-meta.xml
<CustomField>
    <fullName>Contract_To_Be_Collected__c</fullName>
    <formula>IF(AND(OR(ISPICKVAL(Contract_Type__c , &apos;Master&apos;),ISPICKVAL(Contract_Type__c , &apos;Unique&apos;),ISPICKVAL(Contract_Type__c , &apos;&apos;)),Count_Payment_Pending_To_Collect__c&gt;0,OR(ISPICKVAL(Status , &apos;Payment Process&apos;),ISPICKVAL(Status , &apos;Activated&apos;)), SM_Full_Payment__c =FALSE),TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract To Be Collected</label>
    <type>Checkbox</type>
</CustomField>