force-app/main/default/objects/Contract/fields/Contrato_Seguimiento__c.field-meta.xml
<CustomField>
    <fullName>Contrato_Seguimiento__c</fullName>
    <label>Contrato Seguimiento</label>
    <summaryFilterItems>
        <field>SM_ACH_Order__c.SM_Payment_Type__c</field>
        <operation>equals</operation>
        <value>Subscription</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>SM_ACH_Order__c.SM_Payment_Status__c</field>
        <operation>equals</operation>
        <value>Initiated, Pending, Stopped</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>SM_ACH_Order__c.SM_Total__c</field>
        <operation>equals</operation>
        <value>89</value>
    </summaryFilterItems>
    <summaryForeignKey>SM_ACH_Order__c.SM_Contract__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>