force-app/main/default/objects/Contract/fields/Count_AC_Payments_Accepted__c.field-meta.xml
<CustomField>
    <fullName>Count_AC_Payments_Accepted__c</fullName>
    <description>Counts the number of payments AC type that are in effective ACCEPTED OR COLLECTED</description>
    <inlineHelpText>Counts the number of payments AC type that are in effective ACCEPTED OR COLLECTED</inlineHelpText>
    <label>Count AC Payments Accepted</label>
    <summaryFilterItems>
        <field>SM_Payment__c.Payment_Status__c</field>
        <operation>equals</operation>
        <value>ACCEPTED</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>SM_Payment__c.SM_Original_Type__c</field>
        <operation>equals</operation>
        <value>AC</value>
    </summaryFilterItems>
    <summaryForeignKey>SM_Payment__c.SM_Contract__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>