force-app/main/default/objects/Contract/fields/Count_Active_Collection_Attempt__c.field-meta.xml
<CustomField>
    <fullName>Count_Active_Collection_Attempt__c</fullName>
    <label>Count Active Collection Attempt</label>
    <summaryFilterItems>
        <field>Contract_Collection_Attempt__c.Collection_Status__c</field>
        <operation>equals</operation>
        <value>TO BE COLLECTED, PROMISE TO PAY (PTP), WAITING FOR PAYMENT APPROVAL</value>
    </summaryFilterItems>
    <summaryForeignKey>Contract_Collection_Attempt__c.Contract__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>