force-app/main/default/objects/Contract/fields/Count_Expected_Pymnts_Today__c.field-meta.xml
<CustomField>
    <fullName>Count_Expected_Pymnts_Today__c</fullName>
    <description>Calculate the number of payments expected to be made until TODAY()</description>
    <formula>IF(SM_Requires_AC_Payment__c,
  IF(ISPICKVAL(SM_Way_of_AC_Payment__c, &quot;One payment&quot;)
     ,IF(SM_AC_start_date__c&lt;=TODAY(),1,0)
     ,IF(
         SM_AC_Split_Date__c&lt;=TODAY()
         ,2
         ,IF(
             SM_AC_start_date__c&lt;=TODAY()
             ,1
             ,0
           )
        )
     )
  ,0
)
+
IF(Contract_Calculated_RC_Start_Date__c&lt;=TODAY(),
 IF(Contract_End_Date_Calculated__c&lt;=TODAY()
      ,(YEAR(Contract_End_Date_Calculated__c)-YEAR(Contract_Calculated_RC_Start_Date__c))*12
         + MONTH(Contract_End_Date_Calculated__c)- MONTH(Contract_Calculated_RC_Start_Date__c)
      ,(YEAR(TODAY())-YEAR(Contract_Calculated_RC_Start_Date__c))*12
         + MONTH(TODAY())- MONTH(Contract_Calculated_RC_Start_Date__c)
   )
  ,0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Count Expected Pymnts Today</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>