force-app/main/default/objects/Contract/fields/Count_Monthly_Payment_Pending_2__c.field-meta.xml
<CustomField>
    <fullName>Count_Monthly_Payment_Pending_2__c</fullName>
    <formula>IF(SM_Full_Payment__c =TRUE, 0,
Count_Expected_Pymnts_Today_2__c
- IF(Count_AC_Payments_Made__c&gt;2,
2,
Count_AC_Payments_Made__c)
- Count_Monthly_Payments_Made__c
+SM_Number_of_Refund__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Count Monthly Payment Pending 2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>