force-app/main/default/objects/Contract/fields/Count_Monthly_Payments_Made__c.field-meta.xml
<CustomField>
    <fullName>Count_Monthly_Payments_Made__c</fullName>
    <description>Only include payments accepted and transmitted</description>
    <label>Count Monthly Payments Made</label>
    <summaryFilterItems>
        <field>SM_Payment__c.Payment_Status__c</field>
        <operation>equals</operation>
        <value>ACH TRANSMITTED, ACCEPTED</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>SM_Payment__c.SM_Type__c</field>
        <operation>notEqual</operation>
        <value>AC</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>SM_Payment__c.SM_Original_Type__c</field>
        <operation>notEqual</operation>
        <value>AC</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>SM_Payment__c.SM_Amount__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </summaryFilterItems>
    <summaryForeignKey>SM_Payment__c.SM_Contract__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>