force-app/main/default/objects/Contract/fields/Count_Months_in_Suscription__c.field-meta.xml
<CustomField>
    <fullName>Count_Months_in_Suscription__c</fullName>
    <description>This formula Caclulates the number of payments to be made for the contract in total</description>
    <formula>IF(ISPICKVAL(SM_Way_of_AC_Payment__c, &quot;One payment&quot;),1,2)
+IF(StartDate &gt;SM_Start_date__c,
          ((YEAR( Contract_End_Date_Calculated__c ) - YEAR(StartDate ))*12) 
            + (MONTH(Contract_End_Date_Calculated__c ) - MONTH( StartDate )),
          ((YEAR( Contract_End_Date_Calculated__c ) - YEAR(SM_Start_date__c))*12) 
            + (MONTH(Contract_End_Date_Calculated__c ) - MONTH( SM_Start_date__c))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Count Months in Suscription</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>