force-app/main/default/objects/Contract/fields/Count_Payment_Pending_To_Collect__c.field-meta.xml
<CustomField>
    <fullName>Count_Payment_Pending_To_Collect__c</fullName>
    <formula>IF(Count_Monthly_Payment_Pending__c - Count_Active_Collection_Attempt__c &lt;0,0,Count_Monthly_Payment_Pending__c - Count_Active_Collection_Attempt__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Count Payment Pending To Collect</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>