force-app/main/default/objects/Contract/fields/Current_Month_Estimated_Cash_Flow_Amount__c.field-meta.xml
<CustomField>
    <fullName>Current_Month_Estimated_Cash_Flow_Amount__c</fullName>
    <formula>IF(AND(
   MONTH( SM_AC_start_date__c ) == MONTH( TODAY() ),
   YEAR( SM_AC_start_date__c ) == YEAR( TODAY() )
  )
 ,SM_Net_AC__c
 , SM_Net_Monthly_offer__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Month Estimated Cash Flow Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>