force-app/main/default/objects/Contract/fields/Current_Month_Pymnt_Type__c.field-meta.xml
<CustomField>
    <fullName>Current_Month_Pymnt_Type__c</fullName>
    <formula>IF(AND(
MONTH( SM_AC_start_date__c ) == MONTH( TODAY() ),
YEAR( SM_AC_start_date__c ) == YEAR( TODAY() )
)
,&apos;AC&apos;
, &apos;RC&apos;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Month Pymnt Type</label>
    <type>Text</type>
</CustomField>