force-app/main/default/objects/Contract/fields/Exclude_Insurance_Report__c.field-meta.xml
<CustomField>
    <fullName>Exclude_Insurance_Report__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exclude Insurance Report</label>
    <type>Checkbox</type>
</CustomField>