force-app/main/default/objects/Contract/fields/Existing_Instance_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Existing_Instance_Record_Id__c</fullName>
    <label>Existing Instance Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>