force-app/main/default/objects/Contract/fields/Existing_Salesforce_ID__c.field-meta.xml
<CustomField>
    <fullName>Existing_Salesforce_ID__c</fullName>
    <externalId>true</externalId>
    <label>Existing Salesforce ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>