force-app/main/default/objects/Contract/fields/Expected_date_for_contract_activation__c.field-meta.xml
<CustomField>
    <fullName>Expected_date_for_contract_activation__c</fullName>
    <label>Expected date for contract activation</label>
    <type>Date</type>
</CustomField>