force-app/main/default/objects/Contract/fields/First_Payment_Made__c.field-meta.xml
<CustomField>
    <fullName>First_Payment_Made__c</fullName>
    <label>First Payment Made Date</label>
    <summarizedField>SM_Payment__c.CreatedDate</summarizedField>
    <summaryFilterItems>
        <field>SM_Payment__c.Payment_Status__c</field>
        <operation>equals</operation>
        <value>ACH TRANSMITTED, ACCEPTED</value>
    </summaryFilterItems>
    <summaryForeignKey>SM_Payment__c.SM_Contract__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>