force-app/main/default/objects/Contract/fields/frm50k__c.field-meta.xml
<CustomField>
    <fullName>frm50k__c</fullName>
    <label>frm50k</label>
    <summaryForeignKey>F50K_Master50K__c.F50K_Contract__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>