force-app/main/default/objects/Contract/fields/frm_AcDate__c.field-meta.xml
<CustomField>
    <fullName>frm_AcDate__c</fullName>
    <formula>TEXT(MONTH(SM_AC_start_date__c))+&quot;/&quot;+TEXT(DAY(SM_AC_start_date__c))+&quot;/&quot;+TEXT(YEAR(SM_AC_start_date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>frm_AcDate</label>
    <type>Text</type>
</CustomField>